[package]
name = "unblock"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2021"
rust-version = "1.57"
description = "A thread pool for isolating blocking in async programs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/botika/unblock"
keywords = ["async", "spawn_blocking"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
mt = ["num_cpus"]

[dependencies]
async-oneshot = { git = "https://github.com/botika/async-oneshot" }
once_cell = "1.4"
num_cpus = { version = "1.13", optional = true }
parking_lot = "0.12"

[dev-dependencies]
futures = "0.3"
