[package]
name = "unblock"
version = "0.6.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2021"
rust-version = "1.57"
description = "A thread pool for isolating blocking in async programs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/botika/unblock"
keywords = ["async", "spawn_blocking"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
mt = ["num_cpus"]
lazy = ["once_cell"]

[dependencies]
#async-oneshot = { git = "https://github.com/botika/async-oneshot", version = "0.5" }
tokio = { version = "1.24", default-features = false, features = ["sync"] }
num_cpus = { version = "1.15", optional = true }
parking_lot = "0.12"
ctor = "0.1"
once_cell = { version = "1.17", optional = true }

[dev-dependencies]
futures = "0.3"
