[package]
name = "unblock"
version = "0.7.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2021"
rust-version = "1.64"
description = "A thread pool for isolating blocking in async programs"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/botika/unblock"
keywords = ["async", "spawn_blocking"]
categories = ["asynchronous", "concurrency"]

[features]
default = ["tokio"]
mt = ["num_cpus"]
lazy = ["once_cell"]

[dependencies]
ctor = "0.1"
num_cpus = { version = "1.15", optional = true }
once_cell = { version = "1.4", optional = true }
parking_lot = "0.12"
pin-project-lite = "0.2"

async-oneshot = { git = "https://github.com/botika/async-oneshot", version = "0.5", optional = true }
tokio = { version = "1.24", default-features = false, features = ["sync"], package = "tokio", optional = true }
kanal = { git = "https://github.com/fereidani/kanal.git", optional = true }

[dev-dependencies]
futures = "0.3"
